소수 만들기
1번 시도

--- a/프로그래머스 1레벨.ipynb
+++ b/프로그래머스 1레벨.ipynb
@@ -173,11 +173,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 소수 만들기\n",
+    "### 레벨1\n",
+    "주어진 숫자 중 3개의 수를 더했을 때 소수가 되는 경우의 개수를 구하려고 합니다. 숫자들이 들어있는 배열 nums가 매개변수로 주어질 때, nums에 있는 숫자들 중 서로 다른 3개를 골라 더했을 때 소수가 되는 경우의 개수를 return 하도록 solution 함수를 완성해주세요."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(nums):\n",
+    "    answer = 0\n",
+    "\n",
+    "\n",
+    "    a = [0, 0, 0]\n",
+    "    for i in range(len(nums)):\n",
+    "        a[0] = nums[i]\n",
+    "        for j in range(i+1, len(nums)):\n",
+    "            a[1] = nums[j]\n",
+    "            for k in range(j+1, len(nums)):\n",
+    "                a[2] = nums[k]\n",
+    "                temp = True\n",
+    "                for l in range(2, (sum(a)//2)):\n",
+    "                    if sum(a) % l == 0:\n",
+    "                        temp = False\n",
+    "                if temp:\n",
+    "                    answer += 1\n",
+    "\n",
+    "    return answer"
+   ]
   },
   {
    "cell_type": "code",
