--- a/프로그래머스 1레벨.ipynb
+++ b/프로그래머스 1레벨.ipynb
@@ -277,8 +277,75 @@
    "metadata": {},
    "source": [
     "## 키패드 누르기\n",
-    "### 레벨 1\n"
+    "### 레벨 1\n",
+    "\n",
+    "이 전화 키패드에서 왼손과 오른손의 엄지손가락만을 이용해서 숫자만을 입력하려고 합니다.\n",
+    "맨 처음 왼손 엄지손가락은 * 키패드에 오른손 엄지손가락은 # 키패드 위치에서 시작하며, 엄지손가락을 사용하는 규칙은 다음과 같습니다.\n",
+    "\n",
+    "엄지손가락은 상하좌우 4가지 방향으로만 이동할 수 있으며 키패드 이동 한 칸은 거리로 1에 해당합니다.\n",
+    "왼쪽 열의 3개의 숫자 1, 4, 7을 입력할 때는 왼손 엄지손가락을 사용합니다.\n",
+    "오른쪽 열의 3개의 숫자 3, 6, 9를 입력할 때는 오른손 엄지손가락을 사용합니다.\n",
+    "가운데 열의 4개의 숫자 2, 5, 8, 0을 입력할 때는 두 엄지손가락의 현재 키패드의 위치에서 더 가까운 엄지손가락을 사용합니다.\n",
+    "4-1. 만약 두 엄지손가락의 거리가 같다면, 오른손잡이는 오른손 엄지손가락, 왼손잡이는 왼손 엄지손가락을 사용합니다.\n",
+    "순서대로 누를 번호가 담긴 배열 numbers, 왼손잡이인지 오른손잡이인 지를 나타내는 문자열 hand가 매개변수로 주어질 때, 각 번호를 누른 엄지손가락이 왼손인 지 오른손인 지를 나타내는 연속된 문자열 형태로 return 하도록 solution 함수를 완성해주세요."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers, hand):\n",
+    "    answer = ''\n",
+    "    left = ['*', '7', '4', '1']\n",
+    "    right = ['#', '9', '6', '3']\n",
+    "    nolr = ['0', '8', '5', '2']\n",
+    "    lfhand = '*'\n",
+    "    rthand = '#'\n",
+    "    for i in numbers:\n",
+    "        if str(i) in left:\n",
+    "\n",
+    "            answer += 'L'\n",
+    "            lfhand = str(i)\n",
+    "        elif str(i) in right:\n",
+    "            answer += 'R'\n",
+    "            rthand = str(i)\n",
+    "        else:\n",
+    "            if lfhand in left:\n",
+    "                dis_left = abs(left.index(lfhand)-nolr.index(str(i)))+1\n",
+    "            else:\n",
+    "                dis_left = abs(nolr.index(lfhand)-nolr.index(str(i)))\n",
+    "\n",
+    "            if rthand in right:\n",
+    "                dis_right = abs(right.index(rthand)-nolr.index(str(i)))+1\n",
+    "            else:\n",
+    "                dis_right = abs(nolr.index(rthand)-nolr.index(str(i)))\n",
+    "            if dis_right < dis_left:\n",
+    "\n",
+    "                answer += 'R'\n",
+    "                rthand = str(i)\n",
+    "            elif dis_left < dis_right:\n",
+    "\n",
+    "                answer += 'L'\n",
+    "                lfhand = str(i)\n",
+    "            else:\n",
+    "                answer += hand[0].upper()\n",
+    "                if hand[0].upper() == 'L':\n",
+    "                    lfhand = str(i)\n",
+    "\n",
+    "                else:\n",
+    "                    rthand = str(i)\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
