--- a/프로그래머스 1레벨.ipynb
+++ b/프로그래머스 1레벨.ipynb
@@ -341,11 +341,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 로또의 최고 순위와 최저 순위\n",
+    "로또 6/45(이하 '로또'로 표기)는 1부터 45까지의 숫자 중 6개를 찍어서 맞히는 대표적인 복권입니다. 아래는 로또의 순위를 정하는 방식입니다. 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+    "def solution(lottos, win_nums):\n",
+    "    answer = 0\n",
+    "    win=0\n",
+    "    price=[6,6,5,4,3,2,1]\n",
+    "    for i in lottos:\n",
+    "        if i in win_nums:\n",
+    "            win+=1\n",
+    "        elif i==0:\n",
+    "            answer+=1\n",
+    "    \n",
+    "    return [price[answer+win],price[win]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 숫자 문자열과 영단어\n",
+    "네오와 프로도가 숫자놀이를 하고 있습니다. 네오가 프로도에게 숫자를 건넬 때 일부 자릿수를 영단어로 바꾼 카드를 건네주면 프로도는 원래 숫자를 찾는 게임입니다.\n",
+    "\n",
+    "다음은 숫자의 일부 자릿수를 영단어로 바꾸는 예시입니다.\n",
+    "\n",
+    "1478 → \"one4seveneight\"\n",
+    "234567 → \"23four5six7\"\n",
+    "10203 → \"1zerotwozero3\"\n",
+    "이렇게 숫자의 일부 자릿수가 영단어로 바뀌어졌거나, 혹은 바뀌지 않고 그대로인 문자열 s가 매개변수로 주어집니다. s가 의미하는 원래 숫자를 return 하도록 solution 함수를 완성해주세요.\n",
+    "\n",
+    "참고로 각 숫자에 대응되는 영단어는 다음 표와 같습니다."
+   ]
   }
  ],
  "metadata": {
