--- a/프로그래머스 1레벨.ipynb
+++ b/프로그래머스 1레벨.ipynb
@@ -353,6 +353,7 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
     "def solution(lottos, win_nums):\n",
     "    answer = 0\n",
     "    win=0\n",
@@ -379,9 +380,30 @@
     "234567 → \"23four5six7\"\n",
     "10203 → \"1zerotwozero3\"\n",
     "이렇게 숫자의 일부 자릿수가 영단어로 바뀌어졌거나, 혹은 바뀌지 않고 그대로인 문자열 s가 매개변수로 주어집니다. s가 의미하는 원래 숫자를 return 하도록 solution 함수를 완성해주세요.\n",
-    "\n",
-    "참고로 각 숫자에 대응되는 영단어는 다음 표와 같습니다."
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    answer = 0\n",
+    "    a = ['zero', 'one', 'two', 'three', 'four',\n",
+    "         'five', 'six', 'seven', 'eight', 'nine']\n",
+    "    for i in a:\n",
+    "        s = s.replace(i, str(a.index(i)))\n",
+    "    return int(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
