--- a/프로그래머스 1레벨.ipynb
+++ b/프로그래머스 1레벨.ipynb
@@ -434,6 +434,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 신규  아이디 추천\n",
+    "카카오에 입사한 신입 개발자 네오는 \"카카오계정개발팀\"에 배치되어, 카카오 서비스에 가입하는 유저들의 아이디를 생성하는 업무를 담당하게 되었습니다. \"네오\"에게 주어진 첫 업무는 새로 가입하는 유저들이 카카오 아이디 규칙에 맞지 않는 아이디를 입력했을 때, 입력된 아이디와 유사하면서 규칙에 맞는 아이디를 추천해주는 프로그램을 개발하는 것입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(new_id):\n",
+    "    answer = ''\n",
+    "    new_id = new_id.lower()\n",
+    "    for i in reversed(range(len(new_id))):\n",
+    "        if new_id[i].isdigit() == False and new_id[i].isalpha() == False and new_id[i] != '-' and new_id[i] != '_' and new_id[i] != '.':\n",
+    "            new_id = new_id[:i]+new_id[i+1:]\n",
+    "    print(new_id)\n",
+    "    dotck = False\n",
+    "    for i in reversed(range(len(new_id))):\n",
+    "        if new_id[i] == '.':\n",
+    "            if dotck:\n",
+    "                new_id = new_id[:i]+new_id[i+1:]\n",
+    "            else:\n",
+    "                dotck = True\n",
+    "        else:\n",
+    "            dotck = False\n",
+    "\n",
+    "    print(new_id)\n",
+    "    if len(new_id) != 0 and new_id[0] == '.':\n",
+    "        new_id = new_id[1:]\n",
+    "\n",
+    "    print(new_id)\n",
+    "\n",
+    "    if len(new_id) != 0 and new_id[-1] == '.':\n",
+    "        new_id = new_id[:-1]\n",
+    "    print(new_id)\n",
+    "\n",
+    "    if new_id == '':\n",
+    "        new_id += 'a'\n",
+    "    if len(new_id) > 15:\n",
+    "        new_id = new_id[0:15]\n",
+    "\n",
+    "    if new_id[0] == '.':\n",
+    "        new_id = new_id[1:]\n",
+    "    if new_id[-1] == '.':\n",
+    "        new_id = new_id[:-1]\n",
+    "    if len(new_id) == 2:\n",
+    "        new_id += new_id[-1]\n",
+    "    elif len(new_id) == 1:\n",
+    "        new_id += new_id[-1]*2\n",
+    "    return new_id"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
