--- a/프로그래머스 2단계.ipynb
+++ b/프로그래머스 2단계.ipynb
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "최솟값 만들기\n",
+    "## 최솟값 만들기\n",
     "문제 설명\n",
     "길이가 같은 배열 A, B 두개가 있습니다. 각 배열은 자연수로 이루어져 있습니다.\n",
     "배열 A, B에서 각각 한 개의 숫자를 뽑아 두 수를 곱합니다. 이러한 과정을 배열의 길이만큼 반복하며, 두 수를 곱한 값을 누적하여 더합니다. 이때 최종적으로 누적된 값이 최소가 되도록 만드는 것이 목표입니다. (단, 각 배열에서 k번째 숫자를 뽑았다면 다음에 k번째 숫자는 다시 뽑을 수 없습니다.)\n",
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,6 +373,49 @@
     "\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 피보나치 수\n",
+    "문제 설명\n",
+    "피보나치 수는 F(0) = 0, F(1) = 1일 때, 1 이상의 n에 대하여 F(n) = F(n-1) + F(n-2) 가 적용되는 수 입니다.\n",
+    "\n",
+    "예를들어\n",
+    "\n",
+    "F(2) = F(0) + F(1) = 0 + 1 = 1\n",
+    "F(3) = F(1) + F(2) = 1 + 1 = 2\n",
+    "F(4) = F(2) + F(3) = 1 + 2 = 3\n",
+    "F(5) = F(3) + F(4) = 2 + 3 = 5\n",
+    "와 같이 이어집니다.\n",
+    "\n",
+    "2 이상의 n이 입력되었을 때, n번째 피보나치 수를 1234567으로 나눈 나머지를 리턴하는 함수, solution을 완성해 주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "\n",
+    "    a, b = 0, 1\n",
+    "    for i in range(n-1):\n",
+    "        a, b = b, a + b\n",
+    "\n",
+    "    return b%1234567"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
