--- a/프로그래머스 2단계.ipynb
+++ b/프로그래머스 2단계.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 방문 길이\n",
     "게임 캐릭터를 4가지 명령어를 통해 움직이려 합니다. 명령어는 다음과 같습니다.\n",
@@ -16,64 +15,65 @@
     "L: 왼쪽으로 한 칸 가기\n",
     "\n",
     "캐릭터는 좌표평면의 (0, 0) 위치에서 시작합니다. 좌표평면의 경계는 왼쪽 위(-5, 5), 왼쪽 아래(-5, -5), 오른쪽 위(5, 5), 오른쪽 아래(5, -5)로 이루어져 있습니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def solution(dirs):\n",
-    "    answer = 0\n",
-    "    point = [0, 0]\n",
-    "    \n",
-    "    ckList = []\n",
-    "    \n",
-    "    for i in dirs:\n",
-    "        \n",
-    "        temp = []\n",
-    "        temp.append(point[0])\n",
-    "        temp.append(point[1])\n",
-    "        if i == 'U' and point[1] < 5:\n",
-    "            point[1] += 1\n",
-    "            temp.append(point[0])\n",
-    "            temp.append(point[1])\n",
-    "\n",
-    "        elif i == 'D' and point[1] > -5:\n",
-    "            point[1] -= 1\n",
-    "            temp.append(point[0])\n",
-    "            temp.append(point[1])\n",
-    "        elif i == 'R' and point[0] < 5:\n",
-    "            point[0] += 1\n",
-    "            temp.append(point[0])\n",
-    "            temp.append(point[1])\n",
-    "        elif i == 'L' and point[0] > -5:\n",
-    "            point[0] -= 1\n",
-    "            temp.append(point[0])\n",
-    "            temp.append(point[1])\n",
-    "        else:\n",
-    "            continue\n",
-    "        if temp in ckList:\n",
-    "            continue\n",
-    "\n",
-    "        else:\n",
-    "            answer += 1\n",
-    "            ckList.append(temp)\n",
-    "\n",
-    "        plus = []\n",
-    "        plus.append(temp[2])\n",
-    "        plus.append(temp[3])\n",
-    "        plus.append(temp[0])\n",
-    "        plus.append(temp[1])\n",
-    "        ckList.append(plus)\n",
-    "\n",
-    "    return answer\n"
-   ]
+    "def solution(dirs):\r\n",
+    "    answer = 0\r\n",
+    "    \r\n",
+    "    point = [0, 0]\r\n",
+    "    \r\n",
+    "    ckList = []\r\n",
+    "    \r\n",
+    "    for i in dirs:\r\n",
+    "        \r\n",
+    "        temp = []\r\n",
+    "        temp.append(point[0])\r\n",
+    "        temp.append(point[1])\r\n",
+    "        if i == 'U' and point[1] < 5:\r\n",
+    "            point[1] += 1\r\n",
+    "            temp.append(point[0])\r\n",
+    "            temp.append(point[1])\r\n",
+    "\r\n",
+    "        elif i == 'D' and point[1] > -5:\r\n",
+    "            point[1] -= 1\r\n",
+    "            temp.append(point[0])\r\n",
+    "            temp.append(point[1])\r\n",
+    "        elif i == 'R' and point[0] < 5:\r\n",
+    "            point[0] += 1\r\n",
+    "            temp.append(point[0])\r\n",
+    "            temp.append(point[1])\r\n",
+    "        elif i == 'L' and point[0] > -5:\r\n",
+    "            point[0] -= 1\r\n",
+    "            temp.append(point[0])\r\n",
+    "            temp.append(point[1])\r\n",
+    "        else:\r\n",
+    "            continue\r\n",
+    "        if temp in ckList:\r\n",
+    "            continue\r\n",
+    "\r\n",
+    "        else:\r\n",
+    "            answer += 1\r\n",
+    "            ckList.append(temp)\r\n",
+    "\r\n",
+    "        plus = []\r\n",
+    "        plus.append(temp[2])\r\n",
+    "        plus.append(temp[3])\r\n",
+    "        plus.append(temp[0])\r\n",
+    "        plus.append(temp[1])\r\n",
+    "        ckList.append(plus)\r\n",
+    "\r\n",
+    "    return answer\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 스킬트리\n",
     "선행 스킬이란 어떤 스킬을 배우기 전에 먼저 배워야 하는 스킬을 뜻합니다.\n",
@@ -83,13 +83,12 @@
     "위 순서에 없는 다른 스킬(힐링 등)은 순서에 상관없이 배울 수 있습니다. 따라서 스파크 → 힐링 → 라이트닝 볼트 → 썬더와 같은 스킬트리는 가능하지만, 썬더 → 스파크나 라이트닝 볼트 → 스파크 → 힐링 → 썬더와 같은 스킬트리는 불가능합니다.\n",
     "\n",
     "선행 스킬 순서 skill과 유저들이 만든 스킬트리1를 담은 배열 skill_trees가 매개변수로 주어질 때, 가능한 스킬트리 개수를 return 하는 solution 함수를 작성해주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(skill, skill_trees):\n",
     "    answer = 0\n",
@@ -110,23 +109,23 @@
     "            answer += 1\n",
     "\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 소수 찾기\n",
     "한자리 숫자가 적힌 종이 조각이 흩어져있습니다. 흩어진 종이 조각을 붙여 소수를 몇 개 만들 수 있는지 알아내려 합니다.\n",
     "\n",
     "각 종이 조각에 적힌 숫자가 적힌 문자열 numbers가 주어졌을 때, 종이 조각으로 만들 수 있는 소수가 몇 개인지 return 하도록 solution 함수를 완성해주세요"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from itertools import permutations\n",
     "import math\n",
@@ -154,11 +153,12 @@
     "            answer += 1\n",
     "\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 이진 변환 반복하기\n",
     "0과 1로 이루어진 어떤 문자열 x에 대한 이진 변환을 다음과 같이 정의합니다.\n",
@@ -168,13 +168,12 @@
     "예를 들어, x = \"0111010\"이라면, x에 이진 변환을 가하면 x = \"0111010\" -> \"1111\" -> \"100\" 이 됩니다.\n",
     "\n",
     "0과 1로 이루어진 문자열 s가 매개변수로 주어집니다. s가 \"1\"이 될 때까지 계속해서 s에 이진 변환을 가했을 때, 이진 변환의 횟수와 변환 과정에서 제거된 모든 0의 개수를 각각 배열에 담아 return 하도록 solution 함수를 완성해주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(s):\n",
     "    answer = [0, 0]\n",
@@ -184,11 +183,12 @@
     "        s = bin(len((s.replace('0', ''))))[2:]\n",
     "\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 영어 끝말잇기\n",
     "1부터 n까지 번호가 붙어있는 n명의 사람이 영어 끝말잇기를 하고 있습니다. 영어 끝말잇기는 다음과 같은 규칙으로 진행됩니다.\n",
@@ -212,13 +212,12 @@
     "끝말잇기를 계속 진행해 나가다 보면, 3번 사람이 자신의 세 번째 차례에 말한 tank 라는 단어는 이전에 등장했던 단어이므로 탈락하게 됩니다.\n",
     "\n",
     "사람의 수 n과 사람들이 순서대로 말한 단어 words 가 매개변수로 주어질 때, 가장 먼저 탈락하는 사람의 번호와 그 사람이 자신의 몇 번째 차례에 탈락하는지를 구해서 return 하도록 solution 함수를 완성해주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(n, words):\n",
     "    answer = []\n",
@@ -233,11 +232,12 @@
     "        store.append(i)\n",
     "\n",
     "    return [0, 0]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 2개 이하로 다른 비트\n",
     "양의 정수 x에 대한 함수 f(x)를 다음과 같이 정의합니다.\n",
@@ -246,13 +246,12 @@
     "예를 들어,\n",
     "\n",
     "f(2) = 3 입니다. 다음 표와 같이 2보다 큰 수들 중에서 비트가 다른 지점이 2개 이하이면서 제일 작은 수가 3이기 때문입니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(numbers):\n",
     "    answer = []\n",
@@ -282,11 +281,12 @@
     "                        break\n",
     "\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## H-Index\n",
     "문제 설명\n",
@@ -295,13 +295,12 @@
     "어떤 과학자가 발표한 논문 n편 중, h번 이상 인용된 논문이 h편 이상이고 나머지 논문이 h번 이하 인용되었다면 h의 최댓값이 이 과학자의 H-Index입니다.\n",
     "\n",
     "어떤 과학자가 발표한 논문의 인용 횟수를 담은 배열 citations가 매개변수로 주어질 때, 이 과학자의 H-Index를 return 하도록 solution 함수를 작성해주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(citations):\n",
     "    citations.sort()\n",
@@ -313,22 +312,22 @@
     "            if len(citations)-i >= 0 and citations[len(citations)-i] >= i:\n",
     "                print(citations, citations[len(citations)-i], i)\n",
     "                return i"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 숫자의 표현\n",
     "문제 설명\n",
     "Finn은 요즘 수학공부에 빠져 있습니다. 수학 공부를 하던 Finn은 자연수 n을 연속한 자연수들로 표현 하는 방법이 여러개라는 사실을 알게 되었습니다. 예를들어 15는 다음과 같이 4가지로 표현 할 수 있습니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(n):\n",
     "    answer = 0\n",
@@ -339,11 +338,12 @@
     "        if temp // i == 1:\n",
     "            break\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 최솟값 만들기\n",
     "문제 설명\n",
@@ -358,13 +358,12 @@
     "즉, 이 경우가 최소가 되므로 29를 return 합니다.\n",
     "\n",
     "배열 A, B가 주어질 때 최종적으로 누적된 최솟값을 return 하는 solution 함수를 완성해 주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(A, B):\n",
     "    answer = 0\n",
@@ -375,11 +374,12 @@
     "        answer += A[i]*B[len(A)-1-i]\n",
     "\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 피보나치 수\n",
     "문제 설명\n",
@@ -394,13 +394,12 @@
     "와 같이 이어집니다.\n",
     "\n",
     "2 이상의 n이 입력되었을 때, n번째 피보나치 수를 1234567으로 나눈 나머지를 리턴하는 함수, solution을 완성해 주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(n):\n",
     "    if n < 2:\n",
@@ -411,22 +410,22 @@
     "        a, b = b, a + b\n",
     "\n",
     "    return b%1234567"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## N개의 최소공배수\n",
     "문제 설명\n",
     "두 수의 최소공배수(Least Common Multiple)란 입력된 두 수의 배수 중 공통이 되는 가장 작은 숫자를 의미합니다. 예를 들어 2와 7의 최소공배수는 14가 됩니다. 정의를 확장해서, n개의 수의 최소공배수는 n 개의 수들의 배수 중 공통이 되는 가장 작은 숫자가 됩니다. n개의 숫자를 담은 배열 arr이 입력되었을 때 이 수들의 최소공배수를 반환하는 함수, solution을 완성해 주세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(arr):\n",
     "    while len(arr) > 1:\n",
@@ -442,22 +441,22 @@
     "        arr.pop(0)\n",
     "\n",
     "    return arr[0]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 프린터\n",
     "문제 설명\n",
     "일반적인 프린터는 인쇄 요청이 들어온 순서대로 인쇄합니다. 그렇기 때문에 중요한 문서가 나중에 인쇄될 수 있습니다. 이런 문제를 보완하기 위해 중요도가 높은 문서를 먼저 인쇄하는 프린터를 개발했습니다. 이 새롭게 개발한 프린터는 아래와 같은 방식으로 인쇄 작업을 수행합니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(priorities, location):\n",
     "    answer = 0\n",
@@ -477,11 +476,12 @@
     "            else:\n",
     "                location -= 1\n",
     "        print(priorities,location)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 구명보트\n",
     "문제 설명\n",
@@ -493,13 +493,12 @@
     "\n",
     "사람들의 몸무게를 담은 배열 people과 구명보트의 무게 제한 limit가 매개변수로 주어질 때, 모든 사람을 구출하기 위해 필요한 구명보트 개수의 최솟값을 return 하도록 solution 함수를 작성해주세요.\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(people, limit):\n",
     "    answer = 0\n",
@@ -516,29 +515,29 @@
     "                break\n",
     "            temp += people[j]\n",
     "            q += 1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 더 맵게\n",
     "문제 설명\n",
     "매운 것을 좋아하는 Leo는 모든 음식의 스코빌 지수를 K 이상으로 만들고 싶습니다. 모든 음식의 스코빌 지수를 K 이상으로 만들기 위해 Leo는 스코빌 지수가 가장 낮은 두 개의 음식을 아래와 같이 특별한 방법으로 섞어 새로운 음식을 만듭니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import heapq\n",
     "\n",
@@ -561,24 +560,24 @@
     "                return -1\n",
     "\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 위장\n",
     "문제 설명\n",
     "스파이들은 매일 다른 옷을 조합하여 입어 자신을 위장합니다.\n",
     "\n",
     "예를 들어 스파이가 가진 옷이 아래와 같고 오늘 스파이가 동그란 안경, 긴 코트, 파란색 티셔츠를 입었다면 다음날은 청바지를 추가로 입거나 동그란 안경 대신 검정 선글라스를 착용하거나 해야 합니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(clothes):\n",
     "    answer = 0\n",
@@ -598,22 +597,22 @@
     "            result *= i+1\n",
     "        return result-1\n",
     "    return a[0]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 카펫\n",
     "문제 설명\n",
     "Leo는 카펫을 사러 갔다가 아래 그림과 같이 중앙에는 노란색으로 칠해져 있고 테두리 1줄은 갈색으로 칠해져 있는 격자 모양 카펫을 봤습니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(brown, yellow):\n",
     "    answer = []\n",
@@ -624,11 +623,12 @@
     "    for i in nums:\n",
     "        if 2*i[0]+2*i[1]+4 == brown:\n",
     "            return [max(i)+2, min(i)+2]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## [3차] n진수 게임\n",
     "문제 설명\n",
@@ -637,13 +637,12 @@
     "\n",
     "숫자를 0부터 시작해서 차례대로 말한다. 첫 번째 사람은 0, 두 번째 사람은 1, … 열 번째 사람은 9를 말한다.\n",
     "10 이상의 숫자부터는 한 자리씩 끊어서 말한다. 즉 열한 번째 사람은 10의 첫 자리인 1, 열두 번째 사람은 둘째 자리인 0을 말한다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution1(n, q):\n",
     "    a = ['0', '1', '2', '3', '4', '5', '6', '7',\n",
@@ -682,22 +681,22 @@
     "    for i in range(1, len(biglist)):\n",
     "        answer += biglist[i][p-1]\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 주식가격\n",
     "문제 설명\n",
     "초 단위로 기록된 주식가격이 담긴 배열 prices가 매개변수로 주어질 때, 가격이 떨어지지 않은 기간은 몇 초인지를 return 하도록 solution 함수를 완성하세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solution(prices):\n",
     "    answer = []\n",
@@ -712,14 +711,16 @@
     "        if k:\n",
     "            answer.append(len(prices)-i-1)\n",
     "    return answer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
