--- a/프로그래머스 2단계.ipynb
+++ b/프로그래머스 2단계.ipynb
@@ -34,9 +34,12 @@
     "        \r\n",
     "        temp = []\r\n",
     "        temp.append(point[0])\r\n",
+    "    for i in dirs:\r\n",
     "        \r\n",
+    "        temp = []\r\n",
+    "        temp.append(point[0])    \r\n",
     "        \r\n",
-    "        \r\n",
+    "\r\n",
     "        temp.append(point[1])\r\n",
     "        if i == 'U' and point[1] < 5:\r\n",
     "            point[1] += 1\r\n",
