다리를 지나는 트럭
1번

--- a/프로그래머스 2단계.ipynb
+++ b/프로그래머스 2단계.ipynb
@@ -22,59 +22,59 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "def solution(dirs):\r\n",
-    "    answer = 0\r\n",
-    "    \r\n",
-    "    point = [0, 0]\r\n",
-    "    \r\n",
-    "    \r\n",
-    "    ckList = []\r\n",
-    "    \r\n",
-    "    for i in dirs:\r\n",
-    "        \r\n",
-    "        temp = []\r\n",
-    "        temp.append(point[0])\r\n",
-    "    for i in dirs:\r\n",
-    "        \r\n",
-    "        temp = []\r\n",
-    "        temp.append(point[0])    \r\n",
-    "        \r\n",
-    "\r\n",
-    "        temp.append(point[1])\r\n",
-    "        if i == 'U' and point[1] < 5:\r\n",
-    "            point[1] += 1\r\n",
-    "            temp.append(point[0])\r\n",
-    "            temp.append(point[1])\r\n",
-    "\r\n",
-    "        elif i == 'D' and point[1] > -5:\r\n",
-    "            point[1] -= 1\r\n",
-    "            temp.append(point[0])\r\n",
-    "            temp.append(point[1])\r\n",
-    "        elif i == 'R' and point[0] < 5:\r\n",
-    "            point[0] += 1\r\n",
-    "            temp.append(point[0])\r\n",
-    "            temp.append(point[1])\r\n",
-    "        elif i == 'L' and point[0] > -5:\r\n",
-    "            point[0] -= 1\r\n",
-    "            temp.append(point[0])\r\n",
-    "            temp.append(point[1])\r\n",
-    "        else:\r\n",
-    "            continue\r\n",
-    "        if temp in ckList:\r\n",
-    "            continue\r\n",
-    "\r\n",
-    "        else:\r\n",
-    "            answer += 1\r\n",
-    "            ckList.append(temp)\r\n",
-    "\r\n",
-    "        plus = []\r\n",
-    "        plus.append(temp[2])\r\n",
-    "        plus.append(temp[3])\r\n",
-    "        plus.append(temp[0])\r\n",
-    "        plus.append(temp[1])\r\n",
-    "        ckList.append(plus)\r\n",
-    "\r\n",
-    "    return answer\r\n"
+    "def solution(dirs):\n",
+    "    answer = 0\n",
+    "    \n",
+    "    point = [0, 0]\n",
+    "    \n",
+    "    \n",
+    "    ckList = []\n",
+    "    \n",
+    "    for i in dirs:\n",
+    "        \n",
+    "        temp = []\n",
+    "        temp.append(point[0])\n",
+    "    for i in dirs:\n",
+    "        \n",
+    "        temp = []\n",
+    "        temp.append(point[0])    \n",
+    "        \n",
+    "\n",
+    "        temp.append(point[1])\n",
+    "        if i == 'U' and point[1] < 5:\n",
+    "            point[1] += 1\n",
+    "            temp.append(point[0])\n",
+    "            temp.append(point[1])\n",
+    "\n",
+    "        elif i == 'D' and point[1] > -5:\n",
+    "            point[1] -= 1\n",
+    "            temp.append(point[0])\n",
+    "            temp.append(point[1])\n",
+    "        elif i == 'R' and point[0] < 5:\n",
+    "            point[0] += 1\n",
+    "            temp.append(point[0])\n",
+    "            temp.append(point[1])\n",
+    "        elif i == 'L' and point[0] > -5:\n",
+    "            point[0] -= 1\n",
+    "            temp.append(point[0])\n",
+    "            temp.append(point[1])\n",
+    "        else:\n",
+    "            continue\n",
+    "        if temp in ckList:\n",
+    "            continue\n",
+    "\n",
+    "        else:\n",
+    "            answer += 1\n",
+    "            ckList.append(temp)\n",
+    "\n",
+    "        plus = []\n",
+    "        plus.append(temp[2])\n",
+    "        plus.append(temp[3])\n",
+    "        plus.append(temp[0])\n",
+    "        plus.append(temp[1])\n",
+    "        ckList.append(plus)\n",
+    "\n",
+    "    return answer\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -718,6 +718,53 @@
     "        if k:\n",
     "            answer.append(len(prices)-i-1)\n",
     "    return answer"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "다리를 지나는 트럭\n",
+    "문제 설명\n",
+    "트럭 여러 대가 강을 가로지르는 일차선 다리를 정해진 순으로 건너려 합니다. 모든 트럭이 다리를 건너려면 최소 몇 초가 걸리는지 알아내야 합니다. 다리에는 트럭이 최대 bridge_length대 올라갈 수 있으며, 다리는 weight 이하까지의 무게를 견딜 수 있습니다. 단, 다리에 완전히 오르지 않은 트럭의 무게는 무시합니다.\n",
+    "\n",
+    "예를 들어, 트럭 2대가 올라갈 수 있고 무게를 10kg까지 견디는 다리가 있습니다. 무게가 [7, 4, 5, 6]kg인 트럭이 순서대로 최단 시간 안에 다리를 건너려면 다음과 같이 건너야 합니다."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "\n",
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    answer = 0\n",
+    "    trucks = deque(truck_weights)\n",
+    "    temp = [0]*bridge_length\n",
+    "    bridge = deque(temp)\n",
+    "\n",
+    "    a = []\n",
+    "    temp = deque(a)\n",
+    "    while len(trucks) > 0 or len(temp) > 0:\n",
+    "        answer += 1\n",
+    "        print(bridge, temp, trucks)\n",
+    "        out = bridge.popleft()\n",
+    "        if out != 0:\n",
+    "            temp.popleft()\n",
+    "        if len(trucks) > 0 and sum(temp)+trucks[0] <= weight:\n",
+    "            push = trucks.popleft()\n",
+    "            bridge.append(push)\n",
+    "            temp.append(push)\n",
+    "        else:\n",
+    "            bridge.append(0)\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "print(solution(2, 10, [7, 4, 5, 6]))\n"
    ],
    "outputs": [],
    "metadata": {}
