큰 수 만들기
2번

--- a/프로그래머스 2단계.ipynb
+++ b/프로그래머스 2단계.ipynb
@@ -770,6 +770,51 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "큰 수 만들기\n",
+    "dark\n",
+    "light\n",
+    "sublime\n",
+    "vim\n",
+    "emacs\n",
+    " Python3 \n",
+    "문제 설명\n",
+    "\n",
+    "어떤 숫자에서 k개의 수를 제거했을 때 얻을 수 있는 가장 큰 숫자를 구하려 합니다.\n",
+    "예를 들어, 숫자 1924에서 수 두 개를 제거하면 [19, 12, 14, 92, 94, 24] 를 만들 수 있습니다. 이 중 가장 큰 숫자는 94 입니다.\n",
+    "문자열 형식으로 숫자 number와 제거할 수의 개수 k가 solution 함수의 매개변수로 주어집니다. number에서 k 개의 수를 제거했을 때 만들 수 있는 수 중 가장 큰 숫자를 문자열 형태로 return 하도록 solution 함수를 완성하세요."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def solution(number, k):\n",
+    "\n",
+    "    temp = [number[0]]\n",
+    "    number = list(reversed(number[1:]))\n",
+    "    while k > 0:\n",
+    "        if len(number) > 0:\n",
+    "            tar = number[-1]\n",
+    "        else:\n",
+    "            return ''.join(temp)[:-k]\n",
+    "        if len(temp) > 0 and temp[-1] < tar:\n",
+    "            temp.pop()\n",
+    "            k -= 1\n",
+    "            continue\n",
+    "        temp.append(number.pop())\n",
+    "\n",
+    "    return ''.join(temp+list(reversed(number)))\n",
+    "\n",
+    "\n",
+    "print(solution(\"999\", 2))\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
